# ci2n

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
ci2n/: app.py  items.py  line_algo.py
models/: item_classifier.h5  junction_classifier.pt  yolo_model.pt
